--- a/index.html
+++ b/index.html
@@ -8,33 +8,80 @@
         body { font-family: Arial, sans-serif; margin: 2em; }
         #answer { margin-top: 2em; padding: 1em; border: 1px solid #ccc; background: #f9f9f9; }
         #sources { margin-top: 1em; }
-        label, input, button { font-size: 1em; }
-        input[type="text"] { width: 60%; padding: 0.5em; }
+        label, input, button, textarea { font-size: 1em; }
+        input[type="text"], textarea { width: 60%; padding: 0.5em; }
         button { padding: 0.5em 1em; }
+        textarea { height: 4em; }
     </style>
 </head>
 <body>
     <h1>Ask the Virtual Assistant</h1>
     <form id="queryForm">
         <label for="question">Your question:</label><br>
-        <input type="text" id="question" name="question" required>
+        <input type="text" id="question" name="question" required><br><br>
+
+        <label for="imageUrl">Image URL (optional):</label><br>
+        <input type="text" id="imageUrl" name="imageUrl" placeholder="Paste image URL here"><br><br>
+
+        <label for="imageBase64">Image Base64 (optional):</label><br>
+        <textarea id="imageBase64" name="imageBase64" placeholder="Or paste base64 string here"></textarea><br><br>
+
+        <label for="imageFile">Or upload an image file:</label>
+        <input type="file" id="imageFile" accept="image/*"><br><br>
+
         <button type="submit">Ask</button>
     </form>
     <div id="answer"></div>
     <div id="sources"></div>
 
     <script>
+        // Helper to fetch image from URL and convert to base64
+        async function fetchImageAsBase64(url) {
+            const response = await fetch(url);
+            const blob = await response.blob();
+            return new Promise((resolve, reject) => {
+                const reader = new FileReader();
+                reader.onloadend = () => resolve(reader.result.split(',')[1]);
+                reader.onerror = reject;
+                reader.readAsDataURL(blob);
+            });
+        }
+
         document.getElementById('queryForm').onsubmit = async function(e) {
             e.preventDefault();
             const question = document.getElementById('question').value;
+            const imageUrl = document.getElementById('imageUrl').value.trim();
+            const imageBase64Input = document.getElementById('imageBase64').value.trim();
+            const imageFile = document.getElementById('imageFile').files[0];
+
             document.getElementById('answer').innerHTML = "Loading...";
             document.getElementById('sources').innerHTML = "";
 
+            let imageBase64 = "";
+
             try {
+                if (imageFile) {
+                    // Convert uploaded file to base64
+                    imageBase64 = await new Promise((resolve, reject) => {
+                        const reader = new FileReader();
+                        reader.onloadend = () => resolve(reader.result.split(',')[1]);
+                        reader.onerror = reject;
+                        reader.readAsDataURL(imageFile);
+                    });
+                } else if (imageUrl) {
+                    // Fetch image from URL and convert to base64
+                    imageBase64 = await fetchImageAsBase64(imageUrl);
+                } else if (imageBase64Input) {
+                    imageBase64 = imageBase64Input;
+                }
+
+                const payload = { question };
+                if (imageBase64) payload.image = imageBase64;
+
                 const response = await fetch('http://127.0.0.1:8000/query', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ question })
+                    body: JSON.stringify(payload)
                 });
                 const data = await response.json();
                 if (data.answer) {
